--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,54 +2,33 @@ Package: clever
 Type: Package
 Title: Calculate Leverage of Component Models
 Version: 0.2.1
-Authors@R: c(
-    person(given = "Amanda",
-           family = "Mejia",
-           email = "mandy.mejia@gmail.com",
-           role = c("aut", "cre")),
-    person(given = "John",
-           family = "Muschelli",
-           email = "muschellij2@gmail.com",
-           role = c("aut"),
-           comment = c(ORCID = "0000-0001-6469-1750")),
-    person(given = "Damon",
-           family = "Pham",
-           email = "damondpham@gmail.com",
-           role = c("ctb"),
-           comment = c(ORCID = "0000-0001-7563-4727")))
-Description: Extends the definition of leverage from linear models
-    to principal components analysis. The name is based on component leverage,
-    or clever.
+Authors@R: c( person(given = "Amanda", family = "Mejia", email =
+        "mandy.mejia@gmail.com", role = c("aut", "cre")), person(given
+        = "John", family = "Muschelli", email =
+        "muschellij2@gmail.com", role = c("aut"), comment = c(ORCID =
+        "0000-0001-6469-1750")), person(given = "Damon", family =
+        "Pham", email = "damondpham@gmail.com", role = c("ctb"),
+        comment = c(ORCID = "0000-0001-7563-4727")))
+Description: Extends the definition of leverage from linear models to
+        principal components analysis. The name is based on component
+        leverage, or clever.
 Depends: R (>= 2.10)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports:
-    cowplot,
-    expm,
-    ggplot2,
-    ggrepel,
-    MASS,
-    e1071,
-    far,
-    glmgen,
-    robustbase,
-    stats
+Imports: cowplot, expm, ggplot2, ggrepel, MASS, e1071, far, glmgen,
+        robustbase, stats
 RoxygenNote: 7.1.1
 URL: https://github.com/mandymejia/clever
 BugReports: https://github.com/mandymejia/clever/issues
-Suggests:
-    ciftiTools,
-    knitr,
-    rmarkdown,
-    RNifti,
-    ggpubr,
-    neurobase,
-    oro.nifti,
-    gridExtra,
-    testthat (>= 2.1.0),
-    covr
-Remotes:
-    glmgen/glmgen/R_pkg/glmgen,
-    mandymejia/ciftiTools
+Suggests: ciftiTools, knitr, rmarkdown, RNifti, ggpubr, neurobase,
+        oro.nifti, gridExtra, testthat (>= 2.1.0), covr
 VignetteBuilder: knitr
+Repository: Neuroconductor
+Remotes:  
+    glmgen/glmgen/R_pkg/glmgen,
+    mandymejia/ciftiTools,
+    neuroconductor/RNifti@929106d1b17d6c09c8b001b5e39d448ed9ef635f,
+    neuroconductor/oro.nifti@bd06b05d2a090c743e51d745a826e8b77af278f0,
+    neuroconductor/neurobase@1d4b172915192d419b4defb2e56d84d7541c03cd
+biocViews: 
